Add docs, deploy script, and comprehensive gitignore
- README: hardware requirements, how-it-works with ASCII pipeline
  diagram, systemd service setup, deploy instructions
- deploy.sh: one-command deploy to Pi with health check
- .gitignore: cover recordings, h264, mp4, uploaded logos, venvs

Made-with: Cursor

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
 __pycache__/
 *.pyc
+*.pyo
+
 recordings/
 *.h264
+*.mp4
+
+# Uploaded team logo (generated at runtime)
+static/team-logo.png
+
+# Debug artifacts
 *.jpg
 !static/**
+
+# Environment
+.env
+*.log
+venv/
+.venv/
